<resources>
    <string name="app_name">RTSP Viewer</string>
    <string name="back_button">Back</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="reorder">Reorder</string>
    <string name="cancel">Cancel</string>
    <string name="clear_button">Clear</string>
    <string name="save_button">Save</string>
    <string name="screen_rtsp_display">RTSP: %1</string>
    <string name="screen_add_rtsp_item">Add stream</string>
    <string name="screen_edit_rtsp_item">Edit: %1</string>

    <string name="no_streaming_items">No streaming items</string>
    <string name="add_rtsp_button">Add stream</string>
    <string name="sort_rtsp_button">Reorder streams</string>
    <string name="field_name">Name(*):</string>
    <string name="field_placeholder_name">Name cannot be empty or space only. eg: Garden</string>
    <string name="field_name_error">Name cannot be empty or space only.</string>
    <string name="field_uri">URL(*):</string>
    <string name="field_placeholder_uri">Start with rtsp://</string>
    <string name="field_uri_error">Invalid URL format. Please ensure the URL starts with "rtsp://" and includes a valid hostname.</string>
    <string name="field_tags">Tags:</string>
    <string name="field_placeholder_tags">Separate with comma</string>
    <string name="checkbox_force_tcp">Force TCP:</string>
    <string name="checkbox_placeholder_force_tcp">Try enable it if the stream cannot be connected.</string>
    <string name="player_state_play">Play</string>
    <string name="player_state_pause">Pause</string>
    <string name="label_name">Name:</string>
    <string name="label_uri">URL:</string>
    <string name="label_tags">Tags:</string>
    <string name="label_force_tcp">Force TCP:</string>
    <string name="delete_dialog_title">Delete \"%1\"</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="rtsp_item_preview_description">Preview for \"%1\"</string>
    <string name="no_stream_available">No stream available</string>
    <string name="tags_all">All</string>

    <string name="description_more_button">More Button</string>
    <string name="description_close_button">Close Button</string>
    <string name="description_end_sorting_button">End Sorting Button</string>
</resources>
