...
    item: RTSPItem,
    moreOption: Boolean = false,
    screenActions: StreamItemScreenActions,
    playerViewModel: RTSPVideoPlayerViewModel? = null
) {
    BoxWithConstraints(
        modifier = modifier.testTag("StreamItemScreenRoot"),
        contentAlignment = Alignment.Center
    ) {
        val isLandscape = maxWidth > maxHeight
        var showDeleteConfirmationPrompt by remember { mutableStateOf(false) }
        val rtspViewModel = playerViewModel ?: koinViewModel<RTSPVideoPlayerViewModel> {
            parametersOf(
...
            }
        }

        if (isLandscape) {
            VideoPlayer(
                modifier = Modifier
                    .testTag("VideoPlayerLandscape")
                    .fillMaxSize(),
                viewModel = rtspViewModel,
            )
        } else {
            Column(
                modifier = Modifier.fillMaxSize(),
...
                            color = MaterialTheme.colorScheme.onSecondary
                        )
                        Text(
                            item.hideCredentialUri,
                            color = MaterialTheme.colorScheme.onSecondary,
                            textAlign = TextAlign.End,
                            modifier = Modifier.testTag("Uri")
                        )
                    }
                }

                val tagsRow: @Composable (Modifier) -> Unit = { mod ->
                    Row(
...
                        )
                    }

                    IconButton(
                        onClick = { moreState = !moreState },
                        colors = IconButtonDefaults.filledIconButtonColors(),
                        modifier = Modifier.testTag("MoreButton")
                    ) {
                        Icon(
                            imageVector = if (moreState == MoreOptionState.CLOSED) Icons.Default.MoreVert else Icons.Default.Close,
                            contentDescription = stringResource(Res.string.add_rtsp_button)
                        )
                    }
...
