...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.Center,
            ) {
                Text(
                    text = stringResource(Res.string.no_streaming_items),
                    modifier = Modifier.testTag("StreamListScreenEmptyText")
                )
            }
        }
    } else if (isSorting) {
        ReorderItemList(
            modifier = modifier,
...
                    text = { Text(stringResource(Res.string.add_rtsp_button)) },
                    leadingIcon = { Icon(Icons.Default.Add, null) },
                    onClick = {
                        isOptionOpening = MoreOptionState.CLOSED
                        screenActions.onAddItemSelected()
                    },
                    modifier = Modifier.testTag("AddButton")
                )
                DropdownMenuItem(
                    text = { Text(stringResource(Res.string.sort_rtsp_button)) },
                    leadingIcon = { Icon(Icons.AutoMirrored.Filled.Sort, null) },
                    onClick = {
                        isOptionOpening = MoreOptionState.CLOSED
...
