...
@Composable
fun AddStreamItemScreen(
    modifier: Modifier = Modifier,
    screenActions: EditStreamItemScreenActions,
) {
    EditStreamItemScreen(
        modifier = modifier.testTag("AddStreamItemScreenRoot"),
        item = RTSPItem(
            id = 0,
            name = "",
            uri = "",
            tags = emptyList(),
            order = -1,
...
